--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,14 +102,14 @@ android {
             File localProperties = project.rootProject.file('local.properties')
             if (localProperties.exists()) {
                 properties.load(localProperties.newDataInputStream())
-//                def store_file = properties.getProperty('store_file')
-//                def store_pwd = properties.getProperty('store_pwd')
-//                def store_alias = properties.getProperty('store_alias')
-//                def store_alias_pwd = properties.getProperty('store_alias_pwd')
-//                storeFile file(store_file)
-//                storePassword store_pwd
-//                keyAlias store_alias
-//                keyPassword store_alias_pwd
+                def store_file = properties.getProperty('store_file')
+                def store_pwd = properties.getProperty('store_pwd')
+                def store_alias = properties.getProperty('store_alias')
+                def store_alias_pwd = properties.getProperty('store_alias_pwd')
+                storeFile file(store_file)
+                storePassword store_pwd
+                keyAlias store_alias
+                keyPassword store_alias_pwd
             }
         }
     }
@@ -276,8 +276,9 @@ tasks.whenTaskAdded { task ->
     }
 }
 
-
 */
+
+
 
 
 apply plugin: 'com.android.application'
