--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
-       <!-- <meta-data
+<!--       <meta-data
             android:name="TA_APPKEY"
             android:value="${MAT_VALUE}" />
         &lt;!&ndash;server address&ndash;&gt;
@@ -83,11 +83,10 @@
         <meta-data
             android:name="vid"
             android:value="\ 00A0" />
-        &lt;!&ndash; your vkey &ndash;&gt;
+        &lt;!&ndash; your vkey &ndash;&gt;&ndash;&gt;
         <meta-data
             android:name="vkey"
             android:value="qpqNCZvkcNca3KsfD6b0gm6S4ncsRVYa" />-->
-
         <activity
             android:name=".SmartcallActivity"
             android:configChanges="locale|orientation|keyboardHidden"
