--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ app/libs/armeabi-v7a/libjfgsdk.so
 将删除 java_pid6699.hprof
 将删除 java_pid7208.hprof
 将删除 java_pid7965.hprof
+/Test Results - LocaleTest.html
+/platform.txt
