--- a/build.gradle
+++ b/build.gradle
@@ -30,20 +30,29 @@ ext {
     compileSdkVersion = 23
     targetSdkVersion = 23
     buildToolsVersion = '23.0.3'
-    robolectric = 'org.robolectric:robolectric:3.0'
-    appcompat = 'com.android.support:appcompat-v7:23.1.1'
+    ////////////////////////////////////////////////////
+    testRobolectric = 'org.robolectric:robolectric:3.1.2'
+    testAssertj = 'com.squareup.assertj:assertj-android:1.1.0'
+    testJunit4 = 'junit:junit:4.12'
+//     Optional -- Mockito framework
+    testMockio = 'org.mockito:mockito-core:2.1.0-RC.1'
+    testEspresso = 'com.android.support.test.espresso:espresso-core:2.2.1'
+    //////////////////////////////////////////////////////////////
+
+    annotation = 'com.android.support:support-annotations:23.3.0'
+    appcompat = 'com.android.support:appcompat-v7:23.3.0'
     appSupport = 'com.android.support:support-v4:23.1.0'
-    appDesige = 'com.android.support:design:23.3.0'
-    appSupport = 'com.android.support:cardview-v7:23.1.0'
+    appDesign = 'com.android.support:design:23.3.0'
+    appCardview = 'com.android.support:cardview-v7:23.3.0'
     recyclerView = 'com.android.support:recyclerview-v7:23.0.1'
     rxjava = 'io.reactivex:rxjava:1.1.3'
     rxAndroid = 'io.reactivex:rxandroid:1.0.1'
     butterknife = 'com.jakewharton:butterknife:8.0.1'
-    apt = 'com.jakewharton:butterknife-compiler:8.0.1'
+    butterknifeApt = 'com.jakewharton:butterknife-compiler:8.0.1'
     glide = 'com.github.bumptech.glide:glide:3.7.0'
     permis = 'com.github.hotchemi:permissionsdispatcher:2.1.3'
     permisApt = 'com.github.hotchemi:permissionsdispatcher-processor:2.1.3'
-    systembartint = 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    systembartint = 'com.readystatesoftware.systembartint:systembartint:1.0.4'
     buglySdk = 'com.tencent.bugly:crashreport:2.1.5'
     buglyNdk = 'com.tencent.bugly:nativecrashreport:2.2.0'
     switchButton = 'com.kyleduo.switchbutton:library:1.4.1'
@@ -51,5 +60,5 @@ ext {
     leakcanaryAndroidNoOp = 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
     //多进程文件共享方案
     multiProcessSp = 'net.grandcentrix.tray:tray:0.10.0'
-    galleryFinal  = 'cn.finalteam:galleryfinal:1.4.8.7'
+    galleryFinal = 'cn.finalteam:galleryfinal:1.4.8.7'
 }
