--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,7 @@ android {
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
+            aidl.srcDirs = ['src/main/aidl']
         }
     }
     testOptions {
@@ -117,10 +118,10 @@ android {
                     def store_pwd = properties.getProperty('store_pwd')
                     def store_alias = properties.getProperty('store_alias')
                     def store_alias_pwd = properties.getProperty('store_alias_pwd')
-                    storeFile  file(store_file)
-                    storePassword  store_pwd
-                    keyAlias  store_alias
-                    keyPassword  store_alias_pwd
+                    storeFile file(store_file)
+                    storePassword store_pwd
+                    keyAlias store_alias
+                    keyPassword store_alias_pwd
                 }
             }
         }
