--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,11 +70,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="TA_APPKEY"
             android:value="${MAT_VALUE}" />
-        <!--server address-->
+        <!-- server address -->
         <meta-data
             android:name="CallOfDuty"
             android:value="${NICELY_VALUE}" />
@@ -118,7 +117,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -190,7 +188,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
             android:windowSoftInputMode="adjustPan|stateHidden" />
-
         <activity
             android:name=".n.view.activity.CloudLiveActivity"
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
@@ -213,11 +210,22 @@
             android:screenOrientation="portrait"
             android:theme="@style/MediaActivityTransition"
             android:windowSoftInputMode="adjustPan|stateHidden" />
-        <!--容纳意见反馈的Activity-->
+        <!-- 容纳意见反馈的Activity -->
         <activity
             android:name=".n.view.mine.SuggestionChatContainerActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:windowSoftInputMode="adjustResize" />
+
+        <service
+            android:name=".n.engine.DownloadService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":download" />
+
+        <activity
+            android:name=".n.view.misc.UpdateActivity"
+            android:process=":download"
+            android:theme="@style/dialog_activity_style" />
     </application>
 
 </manifest>
