--- a/app/build.gradle
+++ b/app/build.gradle
@@ -218,7 +218,7 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile rootProject.ext.robolectric
     compile rootProject.ext.appcompat
     compile rootProject.ext.butterknife
@@ -260,6 +260,7 @@ dependencies {
     //头像更改选择框架
     compile rootProject.ext.galleryFinal
     compile(name: 'JfgAndroidSDK-3.0.114', ext: 'aar')
+    compile files('libs/xUtils-2.6.14.jar')
 }
 
 if (project.hasProperty('keystoreFile') &&
